--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "loguru>=0.7.0",
     "pypdf2>=3.0.1",
+    "faker>=37.4.2",
 ]
 
 [project.optional-dependencies]
