--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
     "loguru>=0.7.0",
     "pypdf2>=3.0.1",
     "faker>=37.4.2",
+    "httpx>=0.28.1",
+    "textblob>=0.19.0",
+    "pip>=25.1.1",
 ]
 
 [project.optional-dependencies]
