refactor: update project naming to be generic multi-party platform
- Change project name from 'reform-uk-messaging' to 'political-messaging-analytics'
- Update descriptions to emphasize multi-party support
- Remove Reform UK specific references from documentation
- Make data sources section generic for any political party
- Update project overview to highlight platform flexibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "reform-uk-messaging"
+name = "political-messaging-analytics"
 version = "0.1.0"
-description = "Reform UK digital footprint analysis and messaging collection"
+description = "Multi-party political messaging analytics and digital footprint analysis platform"
 authors = [
     { name = "Campaign Labs", email = "info@campaignlabs.com" }
 ]
